syntax = "proto3";

package netsvr.totalSessionIdReq;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//business向worker请求网关中全部的session id
message TotalSessionIdReq {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
}